<resources>
    <string name="app_name" translatable="false">yema</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_details_to_log_in">Enter your details to log in</string>
    <string name="enter_your_details_to_register">Enter your details to register</string>
    <string name="phone_number">Phone number</string>
    <string name="continuer">Continue</string>
    <string name="log_in">Log In</string>
    <string name="terms_service">By choosing to continue, you’re agreeing to our Terms of service and Privacy Policy</string>
    <string name="new_user_create_an_account">Don\'t have an account? Register</string>
    <string name="app_name_caps" translatable="false">YEMA</string>
    <string name="incorrect_code">The code you entered is incorrect!</string>
    <string name="hint_number_with_code" translatable="false">+228 99 239 99 29</string>
    <string name="hint_number" translatable="false">99 239 99 29</string>
    <string name="digit_code">A 4-digit code will be sent to the  above number for verification</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="country_region">Country/Region</string>
    <string name="code_to_sent_message">We texted a code to <b>%s</b>\nplease enter it below </string>
    <string name="group_name" translatable="false">By Miaplenou Group</string>
    <string name="enter_your_4_digit_passcode">Enter your 4 digit passcode</string>
    <string name="create_your_passcode">Create your passcode</string>
    <string name="confirm_your_passcode">Confirm your passcode</string>
    <string name="enter_your_passcode">Enter your passcode for account %s</string>
    <string name="finish">Finish</string>
    <string name="the_confirmation_code_was_sent">The confirmation code was sent</string>
    <string name="resend_code_in_s">Resend code in %s</string>
    <string name="house_item_title" translatable="false">Duplex Home at Madjatom Quartier TOTSI 01 BP 407 LOME 01 , Lomé, Togo</string>
    <string name="house_item_price" translatable="false">5.133.131,12 CFA /mois</string>
    <string name="add_item_to_favorite">Add item to favorite</string>
    <string name="house_images">House images</string>
    <string name="phone_indicator" translatable="false">+228</string>
    <string name="verification_6_digit">A 6-digit code will be sent to the  above number for verification</string>
    <string name="terms_policies_text">By choosing to continue, you\'re agreeing to our </string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="mobile_number">Mobile number</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="search_example">try 2 bedrooms lome</string>
    <string name="house_item_image_index">11</string>
    <string name="house_item_image_total">10</string>
    <string name="wishlist">Wishlist</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="all_listing_tab">All listing</string>
    <string name="new_tab">New</string>
    <string name="studio_tab">Studio</string>
    <string name="bedroom_3_tab">3-bedroom</string>
    <string name="terms_policies_link">Terms of service and Privacy Policy</string>
    <string name="details">Details</string>
    <string name="save">Save</string>
    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="detail_description">Description</string>
    <string name="description_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="detail_requirement">Requirements/Deposit Information</string>
    <string name="detail_requirement_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="is_this_still_available">Is this still available?</string>
    <string name="leave_us_a_message">Leave us a message</string>
    <string name="invalid_phone_number_format">Invalid phone number format</string>
    <string name="code_not_sent_yet">The code has not been sent yet</string>
    <string name="image_view_house_description">Image of the house</string>
    <string name="house_rental_term">/%s</string>
    <string name="bedroom_2_tab">2-bedroom</string>
    <string name="no_homes_available">No homes available</string>
    <string name="profile_guest_hi">Hi There!</string>
    <string name="guest_sign_in_text">Sign in to  start finding homes you like\n</string>
    <string name="guest_sign_in">Sign In</string>
    <string name="guest_privacy_policy">Privacy Policy</string>
    <string name="guest_terms_use">Terms of Use</string>
    <string name="title_activity_loading_screen">LoadingScreenActivity</string>
    <string name="your_number">Your Number</string>
    <string name="your_account">Your Account</string>
    <string name="settings">Settings</string>
    <string name="profile_privacy_policy"><![CDATA[Privacy Policy & Terms of Use]]></string>
    <string name="feedback_us">Feedback us</string>
    <string name="notifications">Notifications</string>
    <string name="location">Location</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="guest_wishlist_text">Sign in to add items to your wishlist</string>
    <string name="edit">Edit</string>
    <string name="wishlist_item_title">Duplex Home at Madjatom Quartier TOTSI 01 BP 407 LOME 01 , Lomé, Togo</string>
    <string name="item_saved_to_wishlist">Item saved to Wishlist</string>
    <string name="item_removed_from_wishlist">Item removed from Wishlist</string>
    <string name="confirm_remove_from_wishlist">Delete item(s) from wishlist?</string>
    <string name="items_removed_from_wishlist">Items removed from wishlist</string>
    <string name="empty_wishlist">No house added to wishlist</string>
    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="share_title">Share this house with your friends</string>
    <string name="assistance">Assistance</string>
    <string name="user_id">ID: %s</string>
    <string name="default_whatsapp_message">Hello!! I want to have more information about this house. Thanks</string>
    <string name="default_dynamic_link_description">Come and check out this house that you might like</string>
    <string name="default_dynamic_link_title">Yema by Miaplenou Group</string>
    <string name="default_share_message"><![CDATA[🏡 Check out this amazing house for %s!\n.]]></string>
    <string name="default_share_message_title"><![CDATA[🔖 Title: %s\n]]></string>
    <string name="default_share_message_location"><![CDATA[📍 Location: %s\n]]></string>
    <string name="default_share_message_price"><![CDATA[💰 Price: %s %s\n\n]]></string>
    <string name="default_share_message_contact">Contact %s for more details or to schedule a viewing.</string>
    <string name="send">Send</string>
    <string name="send_the_message_with_whatsapp">Send the message with whatsapp?</string>
    <string name="no_whatsapp_message">You need whatsapp to contact the client service. \n Client service phone number : %s</string>
    <string name="whatsapp_was_not_found">Whatsapp was not found !</string>
    <string name="yema_logo">Yema Logo</string>
    <string name="go_back">Go back</string>
    <string name="save_item">Add item to wishlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_wishlist">Remove wishlist</string>
    <string name="filter">Filters</string>
    <string name="location_town">Location/Town</string>
    <string name="budget">Budget</string>
    <string name="see_results">See results</string>
    <string name="reset">Reset</string>
    <string name="type_of_listing">Type of listing</string>
    <string name="for_rent">For rent</string>
    <string name="for_sale">For sale</string>
    <string name="price_range">Price range</string>
    <string name="less">less</string>
    <string name="more">more</string>
    <string name="average_listing_price">The average listing price is %d %s</string>
    <string name="or">OR</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="house_type">House type</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="any">Any</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="parking">Parking spot (amount of cars that can fit)</string>
    <string name="living_area">Living area (m²)</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="keywords">Keywords</string>
    <string name="keywords_hint">(separate words using commas)</string>
    <string name="apply">Apply</string>
    <string name="filter_applied">Filter applied successfully</string>
    <string name="search_result_found">%d results found</string>
    <string name="search_no_result">No results found</string>
    <string name="yes_filter">Yes</string>
    <string name="reset_filter">Reset the filter?</string>
    <string name="no_filter_applied">No filter applied</string>
    <string name="open_whatsapp">Do you want to open whatsapp and contact the customer service? </string>
    <string name="open">Open</string>
</resources>