<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.fragments.main.profile.ProfileGuestFragment">

    <TextView
        android:id="@+id/profile_guest_hi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/profile_guest_hi"
        android:textAppearance="@style/profile_guest_hi"
        app:layout_constraintEnd_toStartOf="@id/assistance_image_view"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/guideline" />


    <ImageButton
        android:id="@+id/assistance_image_view"
        android:layout_width="@dimen/default_logo_size_48"
        android:layout_height="@dimen/default_logo_size_48"
        android:background="@android:color/transparent"
        android:contentDescription="@string/assistance"
        android:src="@drawable/assistance"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintTop_toBottomOf="@id/guideline" />


    <TextView
        android:id="@+id/guest_sign_in_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/guest_sign_in_text"
        android:textAppearance="@style/guest_sign_in_text"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/profile_guest_hi" />

    <Button
        android:id="@+id/guest_sign_in_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_state"
        android:text="@string/guest_sign_in"
        android:layout_marginTop="@dimen/default_margin"
        android:textAppearance="@style/button_continue"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/guest_sign_in_text" />


    <TextView
        android:id="@+id/guest_privacy_policy"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_logo_size_48"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/guest_privacy_policy"
        android:textAppearance="@style/guest_privacy_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v3" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/guest_privacy_policy" />

    <TextView
        android:id="@+id/guest_terms_use"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_logo_size_48"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/guest_terms_use"
        android:textAppearance="@style/guest_privacy_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_v4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>